fixed gameboard being cut off on some devices/browsers in mobile viewports

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body{
 
 .container{
     background-color: black;
-    height: 100%;
+    /*height: 100%;*/
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -35,6 +35,7 @@ header{
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
 }
 
 #board{
